# radrootsd

./: .gitignore  AGENTS.md  Cargo.toml  README  config.toml  flake.nix  identity.json
contract/coverage/: POLICY.md  include.txt
crates/radrootsd/: Cargo.toml
crates/radrootsd/src/: cli.rs  identity.rs  lib.rs  main.rs  radrootsd.rs  utils.rs
crates/radrootsd/src/infra/: nostr.rs
crates/radrootsd/src/rpc/: error.rs  mod.rs  relays.rs  system.rs
crates/radrootsd/src/rpc/events/: mod.rs
crates/radrootsd/src/rpc/events/listing/: list.rs
crates/radrootsd/src/rpc/events/note/: list.rs  publish.rs
crates/radrootsd/src/rpc/events/profile/: list.rs  mod.rs
crates/radrootsd/src/rpc/relays/: connect.rs  mod.rs  remove.rs  status.rs
src/: config.rs  lib.rs  main.rs  radrootsd.rs
src/api/: mod.rs
src/api/jsonrpc/: context.rs  mod.rs  nostr.rs  params.rs  relays.rs  server.rs
src/api/jsonrpc/methods/: mod.rs  system.rs
src/api/jsonrpc/methods/domains/trade/: mod.rs
src/api/jsonrpc/methods/domains/trade/listing/: dvm.rs  get.rs  helpers.rs  list.rs  mod.rs  order.rs  orders.rs  series.rs  types.rs  validate.rs
src/api/jsonrpc/methods/events/: helpers.rs  mod.rs  profile.rs
src/api/jsonrpc/methods/events/comment/: get.rs  list.rs  publish.rs
src/api/jsonrpc/methods/events/dvm_feedback/: get.rs  list.rs  publish.rs
src/api/jsonrpc/methods/events/dvm_request/: get.rs  list.rs  publish.rs
src/api/jsonrpc/methods/events/dvm_result/: get.rs  list.rs  publish.rs
src/api/jsonrpc/methods/events/farm/: get.rs  list.rs  mod.rs  publish.rs
src/api/jsonrpc/methods/events/follow/: get.rs  list.rs  mod.rs  publish.rs  update.rs
src/api/jsonrpc/methods/events/list_set/: get.rs  list.rs  mod.rs  publish.rs
src/api/jsonrpc/methods/events/listing/: get.rs  list.rs  mod.rs  publish.rs
src/api/jsonrpc/methods/events/plot/: get.rs  list.rs  mod.rs  publish.rs
src/api/jsonrpc/methods/events/post/: get.rs  list.rs  publish.rs
src/api/jsonrpc/methods/events/profile/: get.rs  list.rs  publish.rs
src/api/jsonrpc/methods/events/reaction/: get.rs  list.rs  publish.rs
src/api/jsonrpc/methods/events/resource_area/: get.rs  list.rs  publish.rs
src/api/jsonrpc/methods/events/resource_cap/: get.rs  list.rs  publish.rs
src/api/jsonrpc/methods/nip46/: connect.rs  get_public_key.rs  mod.rs  nip04_decrypt.rs  nip04_encrypt.rs  nip44_decrypt.rs  nip44_encrypt.rs  ping.rs  session_close.rs  session_status.rs  sign_event.rs  status.rs
src/api/jsonrpc/methods/relays/: add.rs  connect.rs  list.rs  mod.rs  remove.rs  status.rs
src/app/: cli.rs  config.rs  identity_storage.rs  mod.rs  paths.rs  runtime.rs
src/core/: mod.rs  state.rs  transport_publish.rs
src/core/bridge/: mod.rs  publish.rs  store.rs
src/core/nip46/: mod.rs  session.rs
src/core/publish_proxy/: mod.rs
src/nip46/: client.rs  connection.rs  mod.rs  session.rs
src/rpc/: error.rs  mod.rs  system.rs
src/rpc/domains/: mod.rs
src/rpc/domains/trade/: mod.rs
src/rpc/domains/trade/listing/: dvm.rs  get.rs  helpers.rs  list.rs  mod.rs  orders.rs  series.rs
src/rpc/events/: mod.rs
src/rpc/events/listing/: list.rs  publish.rs
src/rpc/events/post/: list.rs  mod.rs  publish.rs
src/rpc/events/profile/: list.rs  publish.rs
src/rpc/relays/: add.rs  connect.rs  list.rs  remove.rs
src/transport/: mod.rs
src/transport/jsonrpc/: auth.rs  context.rs  error.rs  mod.rs  params.rs  registry.rs  server.rs
src/transport/jsonrpc/methods/: mod.rs  publish_proxy.rs  transport_publish.rs
src/transport/jsonrpc/methods/bridge/: farm_publish.rs  job_list.rs  job_status.rs  listing_publish.rs  mod.rs  order_request.rs  profile_publish.rs  public_trade.rs  shared.rs  status.rs
src/transport/jsonrpc/methods/nip46/: connect.rs  get_public_key.rs  mod.rs  nip04.rs  nip44.rs  ping.rs  session_authorize.rs  session_close.rs  session_list.rs  session_require_auth.rs  session_status.rs  sign_event.rs  status.rs
src/transport/jsonrpc/nip46/: client.rs  connection.rs  mod.rs  session.rs
src/transport/nostr/: listener.rs  mod.rs  protocol.rs
tests/: source_boundary.rs
