[package]
name = "radrootsd"
version = "0.1.0"
edition = "2024"
authors = ["Radroots Authors"]
rust-version = "1.97.0"
license = "AGPL-3.0-or-later"
description = "Radroots local runtime daemon for storage, sync, and relay publishing"

[workspace]
resolver = "2"

[workspace.dependencies]
radroots_event = { path = "../lib/crates/event", version = "=1.0.0-alpha.1" }
radroots_event_codec = { path = "../lib/crates/event_codec", version = "=1.0.0-alpha.1" }
radroots_identity = { path = "../lib/crates/identity", version = "=1.0.0-alpha.1" }
radroots_nostr = { path = "../lib/crates/nostr", version = "=1.0.0-alpha.1" }
radroots_transport_publish_protocol = { path = "../lib/crates/transport_publish_protocol", version = "=1.0.0-alpha.1" }
radroots_transport_nostr = { path = "../lib/crates/transport_nostr", version = "=1.0.0-alpha.1", default-features = false }
radroots_transport = { path = "../lib/crates/transport", version = "=1.0.0-alpha.1", default-features = false }
radroots_runtime = { path = "../lib/crates/runtime", version = "=1.0.0-alpha.1" }
radroots_runtime_paths = { path = "../lib/crates/runtime_paths", version = "=1.0.0-alpha.1" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
radroots_event = { workspace = true, features = ["serde", "signature"] }
radroots_event_codec = { workspace = true, features = ["serde_json"] }
radroots_identity = { workspace = true }
radroots_nostr = { workspace = true, features = ["client", "codec", "events", "http"] }
radroots_transport_publish_protocol = { workspace = true, features = ["std", "serde"] }
radroots_transport_nostr = { workspace = true, features = ["std", "client"] }
radroots_transport = { workspace = true }
radroots_runtime = { workspace = true, features = ["cli"] }
radroots_runtime_paths = { workspace = true }
nostr = { version = "0.44.2", features = ["nip46"] }

anyhow = { version = "1" }
clap = { version = "4", features = ["derive"] }
jsonrpsee = { version = "0.26", features = ["server"] }
futures-executor = { version = "0.3" }
rand = { version = "0.9" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
serde_qs = { version = "1.0" }
sha2 = { version = "0.10" }
sqlx = { version = "0.9.0", default-features = false, features = ["derive", "sqlite-bundled"] }
tokio = { version = "1", features = ["full"] }
thiserror = { version = "2" }
tower = { version = "0.5.3", features = ["util"] }
tracing = { version = "0.1" }
uuid = { version = "1.22.0", features = ["v4"] }
url = { version = "2.5.8" }

[dev-dependencies]
tempfile = { version = "3" }
