[package]
name = "radrootsd"
version.workspace = true
edition.workspace = true
authors = ["Radroots Authors"]
rust-version.workspace = true
license.workspace = true
description = "Radroots local runtime daemon for storage, sync, and relay publishing"

[dependencies]
radroots-core = { workspace = true, features = ["std", "serde", "typeshare"] }
radroots-events = { workspace = true, features = ["serde"] }
radroots-events-codec = { workspace = true, features = ["nostr"] }
radroots-identity = { workspace = true }
radroots-nostr = { workspace = true, features = ["sdk", "codec", "http"] }
radroots-runtime = { workspace = true, features = ["cli"] }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"]}
jsonrpsee = { workspace = true, features = ["server"]  }
nostr = { workspace = true }
nostr-sdk = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
